--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(src/include)
 include_directories(third/)
 add_executable(main src/main.cpp)
-target_link_libraries(main ${PROJECT_SOURCE_DIR}/libs/leveldb.lib)
+target_link_libraries(main
+        ${PROJECT_SOURCE_DIR}/libs/libleveldb.a
+        ${PROJECT_SOURCE_DIR}/libs/libz.a
+        )
