--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,13 @@ project(bedrock_level)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(src/include)
 include_directories(third/)
-add_executable(main src/main.cpp)
+add_executable(main
+        src/main.cpp
+        src/sub_chunk.cpp
+        src/utils.cpp
+        )
 target_link_libraries(main
         ${PROJECT_SOURCE_DIR}/libs/libleveldb.a
         ${PROJECT_SOURCE_DIR}/libs/libz.a
+
         )
