Add: finish subchunk parse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(bedrock_level)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(src/include)
 include_directories(third/)
+include_directories(third/nbt-cpp)
 
 #Catch2 Test lib
 #add_library(Catch2 third/catch2/catch_amalgamated.cpp)
@@ -11,13 +12,26 @@ enable_testing()
 add_library(bedrock-level
         src/sub_chunk.cpp
         src/utils.cpp
+        src/bit_tools.cpp
+        src/palette.cpp
+        )
+
+add_library(nbt-cpp
+        third/nbt-cpp/nbt.cpp
+        third/nbt-cpp/nbt_internal.hpp
+        third/nbt-cpp/nbt.hpp
         )
 
 target_link_libraries(bedrock-level
         ${PROJECT_SOURCE_DIR}/libs/libleveldb.a
         ${PROJECT_SOURCE_DIR}/libs/libz.a
-
+        nbt-cpp
         )
+
+
+add_executable(main src/main.cpp)
+target_link_libraries(main bedrock-level)
+
 
 function(create_test name files)
     add_executable(
@@ -36,3 +50,4 @@ endfunction(create_test)
 
 create_test(sub_chunk_test tests/sub_chunk_test.cpp)
 create_test(utils_test tests/utils_test.cpp)
+create_test(bit_tools tests/bit_tools_test.cpp)
