Modify test framewodk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 project(bedrock_level)
 set(CMAKE_CXX_STANDARD 17)
@@ -5,9 +6,14 @@ include_directories(src/include)
 include_directories(third/)
 include_directories(third/nbt-cpp)
 
+message(STATUS ${CMAKE_MODULE_PATH})
+
+
+find_package(Catch2 REQUIRED)
+
 #Catch2 Test lib
-#add_library(Catch2 third/catch2/catch_amalgamated.cpp)
 enable_testing()
+
 
 add_library(bedrock-level
         src/sub_chunk.cpp
@@ -16,6 +22,8 @@ add_library(bedrock-level
         src/palette.cpp
         src/bedrock_level.cpp
         src/bedrock_key.cpp
+        src/data_3d.cpp
+        src/chunk.cpp
         )
 
 add_library(nbt-cpp
@@ -31,8 +39,8 @@ target_link_libraries(bedrock-level
         )
 
 
-add_executable(main src/main.cpp)
-target_link_libraries(main bedrock-level)
+#add_executable(main src/main.cpp)
+#target_link_libraries(main bedrock-level)
 
 
 function(create_test name files)
@@ -40,16 +48,10 @@ function(create_test name files)
             ${name}
             ${files}
     )
-
-    target_link_libraries(${name} bedrock-level ${PROJECT_SOURCE_DIR}/libs/libCatch2.a)
-    target_include_directories(${name} PRIVATE third/catch2)
-    set_target_properties(${name}
-            PROPERTIES
-            RUNTIME_OUTPUT_DIRECTORY
-            "${CMAKE_BINARY_DIR}/tests_bin"
-            )
+    target_link_libraries(${name} PRIVATE Catch2::Catch2WithMain bedrock-level)
 endfunction(create_test)
 
 create_test(sub_chunk_test tests/sub_chunk_test.cpp)
 create_test(utils_test tests/utils_test.cpp)
-create_test(bit_tools tests/bit_tools_test.cpp)
+create_test(bit_tools_test tests/bit_tools_test.cpp)
+create_test(data3d_test tests/data3d_test.cpp)
