NBT list support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,3 +65,4 @@ create_test(utils_test tests/utils_test.cpp)
 create_test(bit_tools_test tests/bit_tools_test.cpp)
 create_test(data3d_test tests/data3d_test.cpp)
 create_test(bedrock_level_test tests/bedrock_level_test.cpp)
+create_test(nbt_test tests/nbt_test.cpp)
