--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,5 +78,8 @@ create_test(sub_chunk_test tests/sub_chunk_test.cpp)
 create_test(utils_test tests/utils_test.cpp)
 create_test(bit_tools_test tests/bit_tools_test.cpp)
 create_test(data3d_test tests/data3d_test.cpp)
-create_test(bedrock_level_test tests/bedrock_level_test.cpp)
+create_test(data_dump_level_test tests/data_dump_test.cpp)
 create_test(nbt_test tests/palettes_test.cpp)
+create_test(actor_test tests/actor_test.cpp)
+create_test(key_test tests/key_test.cpp)
+create_test(bedrock_level_test tests/bedrock_level_test.cpp)
