Add: bedrock_level.get_block

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,3 +83,4 @@ create_test(nbt_test tests/palettes_test.cpp)
 create_test(actor_test tests/actor_test.cpp)
 create_test(key_test tests/key_test.cpp)
 create_test(bedrock_level_test tests/bedrock_level_test.cpp)
+create_test(chunk_test tests/chunk_test.cpp)
