--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 
 project(bedrock_level)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+
 include_directories(src/include)
 include_directories(third/)
 include_directories(third/nbt-cpp)
