add level.dat cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(bedrock-level
         src/scoreboard.cpp
         src/global.cpp
         src/color.cpp
+        src/level_dat.cpp
         )
 
 
