--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ function(create_app name files)
 endfunction(create_app)
 
 create_app(biome_png app/biome_png.cpp)
+create_app(chunk_terrain app/chunk_terrain.cpp)
 create_app(demo app/demo.cpp)
 
 #testing
