Let block colors support minecraft bedrock 1.21

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ endfunction(create_app)
 
 create_app(biome_png app/biome_png.cpp)
 create_app(mem_leak_check app/mem_leak_check.cpp)
+create_app(map_to_png app/map_to_png.cpp)
 
 
 #testing
